--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "gulp-bower": "0.0.10",
     "gulp-bytediff": "^1.0.0",
     "gulp-concat": "^2.6.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-jscs": "^3.0.2",
     "gulp-jshint": "^1.11.2",
     "gulp-minify-html": "^1.0.4",
