Got the websocket to work. Need to fix the comments in the frontend

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "api-check": "~7.5.0",
     "bootstrap": "~3.3.6",
     "jquery": "~2.1.4",
-    "angular-masonry": "0.16.0"
+    "angular-masonry": "0.16.0",
+    "ng-stomp": "^0.2.0"
   },
   "devDependencies": {
     "jasmine-sinon": "~0.4.0",
