--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,8 @@ bootRun.dependsOn 'npmInstall', 'installGulp', 'gulp_bower', 'gulp_compress'
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
+	compile("org.springframework.boot:spring-boot-starter-websocket")
+	compile("org.springframework:spring-messaging")
 	compile("org.apache.commons:commons-lang3:3.4")
 	compile("org.webjars:bootstrap:3.3.5")
 	compile("org.webjars:respond:1.4.2")
