--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,6 @@ bootRun.dependsOn 'npmInstall', 'installGulp', 'gulp_bower', 'gulp_compress'
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-web")
 	compile("org.springframework.boot:spring-boot-starter-websocket")
-	compile("org.springframework.boot:spring-boot-starter-security")
 	compile("org.springframework:spring-messaging")
 	compile("org.apache.commons:commons-lang3:3.4")
 	compile("org.webjars:bootstrap:3.3.5")
@@ -62,6 +61,7 @@ dependencies {
 	compile("org.webjars:html5shiv:3.7.2")
 	compile("org.webjars:jquery:2.1.4")
 	compile("org.springframework.boot:spring-boot-starter-test")
+	compile("org.springframework.boot:spring-boot-starter-security")
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	compile("org.springframework.boot:spring-boot-devtools")
 	compile("com.h2database:h2")
@@ -69,16 +69,16 @@ dependencies {
 	compile("org.liquibase:liquibase-core")
 	compile ("com.fasterxml.jackson.datatype:jackson-datatype-hibernate4:2.3.4")
 
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+//	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
 
-eclipse {
-	classpath {
-		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
-		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
-	}
-}
+//eclipse {
+//	classpath {
+//		 containers.remove('org.eclipse.jdt.launching.JRE_CONTAINER')
+//		 containers 'org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8'
+//	}
+//}
 
 task wrapper(type: Wrapper) {
 	gradleVersion = '2.9'
