Created the cookie stuff for storing JSessions. included the modules as well.

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery": "~2.1.4",
     "angular-masonry": "0.16.0",
     "ng-stomp": "^0.2.0",
-    "angular-ui-router": "^0.2.18"
+    "angular-ui-router": "^0.2.18",
+    "angular-cookies": "^1.5.3"
   },
   "devDependencies": {
     "jasmine-sinon": "~0.4.0",
